# ai-dat

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  lambda_dockerfile  pyproject.toml  samconfig.toml  template.yaml
{{cookiecutter.project_slug}}/app/: lambda_function.py  main-aws-lambda.py  main.py
{{cookiecutter.project_slug}}/app/api/routes/: predictor.py
{{cookiecutter.project_slug}}/app/core/: config.py  events.py  setup.py
{{cookiecutter.project_slug}}/app/models/: prediction.py
{{cookiecutter.project_slug}}/app/services/: predict.py  process.py  utils.py
{{cookiecutter.project_slug}}/ml/: eval.py  train.py
{{cookiecutter.project_slug}}/ml/data/: make_dataset.py
{{cookiecutter.project_slug}}/ml/model/: image_processor.py  model_runner.py  pipeline.py  result_runner.py
{{cookiecutter.project_slug}}/ml/model/examples/: example.json
